alpha site live

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <h1>If Jezz Bezos cared?</h1>
 
-        <p>have you ever struggled </p>
+        <p>Have you ever struggled with the indifference of the abserdly wealthy? me too i wish to disclose that all the statements i make are based off of information that i have linked through the quizz. I aknowledge that i'm speaking of complex things that have manny fassits i also wish to point out how this is to focus on the fact that people in power could do, and should do more</p>
 
     </header>
 
