--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Assistant&family=Cinzel:wght@700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./styles/styles/style.css">
     <title>If Jeff Bezos Cared</title>
 </head>
@@ -11,9 +13,12 @@
 <body class="wrapper">
     <header>
 
-        <h1>If Jezz Bezos cared?</h1>
+        <h1>What if Jezz Bezos cared?</h1>
 
-        <p>Have you ever struggled with the indifference of the abserdly wealthy? me too i wish to disclose that all the statements i make are based off of information that i have linked through the quizz. I aknowledge that i'm speaking of complex things that have manny fassits i also wish to point out how this is to focus on the fact that people in power could do, and should do more</p>
+        <p>Have you ever struggled with the indifference of the abserdly wealthy? Me too, i wish to disclose that all the
+            statements i make are based off of information that i have linked through the quizz. I aknowledge that i'm
+            speaking of complex things that have manny fassits i also wish to point out how this is to focus on the fact
+            that people in power could do, and should do more. Answer the questions below to find out the effect that Jeff Bezos's networth may have to a cause you value.</p>
 
     </header>
 
@@ -23,9 +28,9 @@
             <div class="firstQuestion">
                 <h2>What is important to you? </h2>
                 <label for="question1">Which is more important to you?</label>
-                <p>the natural enviorment!</p>
+                <p>The Natural enviorment!</p>
                 <input autocomplete="off" type="radio" name="question1" value="enivorment">
-                <p>humanitarian causes!</p>
+                <p>Humanitarian causes!</p>
                 <input autocomplete="off" type="radio" name="question1" value="humanitarian">
                 <button class="cta1">change the world!</button>
             </div>
@@ -36,7 +41,7 @@
         <section class="question">
 
             <div class="enviormental hidden">
-                <h2>Enviormental causes are most important to me!</h2>
+                <h2>Enviormental causes are most important to you!</h2>
                 <label for="question2"> how would you beifit this cause ?</label>
                 <p>Doing what you can to help terra firma?</p>
                 <input autocomplete="off" type="radio" name="question2" value="land">
@@ -48,9 +53,9 @@
             <div class="humanity hidden">
                 <h2>Humanitarian causes are most important to you!</h2>
                 <label for="question2">what scale would you focus?</label>
-                <p>provide global support</p>
+                <p>Provide global support</p>
                 <input autocomplete="off" type="radio" name="question2" value="global">
-                <p>support localy</p>
+                <p>Support localy</p>
                 <input autocomplete="off" type="radio" name="question2" value="indivigual">
                 <button class="cta2">change the world!</button>
             </div>
@@ -61,9 +66,9 @@
         <!-- question 3 start -->
         <section class="question">
             <div class="land hidden">
-                <h2>land causes are most important to me!</h2>
-                <label for="question3"> how would you beifit this cause ?</label>
-                <p>protecting Forests</p>
+                <h2>land causes are most important to you!</h2>
+                <label for="question3"> how would you beifit this cause?</label>
+                <p>Protecting Forests</p>
                 <input autocomplete="off" type="radio" name="question3" value="ProtectingForests">
                 <p>Growing Green Energy</p>
                 <input autocomplete="off" type="radio" name="question3" value="greenEnergy">
@@ -71,27 +76,27 @@
             </div>
 
             <div class="water hidden">
-                <h2>water causes are most important to me!</h2>
-                <label for="question3"> how would you beifit this cause ?</label>
-                <p>saving the great barrior reef</p>
+                <h2>water causes are most important to you!</h2>
+                <label for="question3"> how would you beifit this cause?</label>
+                <p>Saving the great barrior reef</p>
                 <input autocomplete="off" type="radio" name="question3" value="savingReef">
-                <p>clearing out trash Island</p>
+                <p>Clearing out trash Island</p>
                 <input autocomplete="off" type="radio" name="question3" value="trashIsland">
                 <button class="cta3">change the world!</button>
             </div>
 
             <div class="global hidden">
-                <h2>societal causes are most important to me!</h2>
-                <label for="question3"> how would you beifit this cause ?</label>
-                <p>doctors without borders</p>
+                <h2>Societal causes are most important to you!</h2>
+                <label for="question3"> how would you beifit this cause?</label>
+                <p>Doctors without Borders</p>
                 <input autocomplete="off" type="radio" name="question3" value="existingPrograms">
-                <p>refugee support</p>
+                <p>Refugee support</p>
                 <input autocomplete="off" type="radio" name="question3" value="globalsupport">
                 <button class="cta3">change the world!</button>
             </div>
 
             <div class="indivigual hidden">
-                <h2>personal rights causes are most important to me!</h2>
+                <h2>Personal rights causes are most important to you!</h2>
                 <label for="question3"> how would you beifit this cause ?</label>
                 <p>helping people get off the street</p>
                 <input autocomplete="off" type="radio" name="question3" value="homelessness">
@@ -116,4 +121,5 @@
 <script src='https://code.jquery.com/jquery-3.4.0.min.js'
     integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
 <script src="./app.js"></script>
+
 </html>
