real final i hope

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 
         <h1>What if Jezz Bezos cared?</h1>
 
-        <p>Have you ever struggled with the indifference of the abserdly wealthy? Me too, i wish to disclose that all the
-            statements i make are based off of information that i have linked through the quizz. I aknowledge that i'm
-            speaking of complex things that have manny fassits i also wish to point out how this is to focus on the fact
-            that people in power could do, and should do more. Answer the questions below to find out the effect that Jeff Bezos's networth may have to a cause you value.</p>
+        <p>Have you ever struggled with the indifference of the absurdly wealthy? Me too.</p>
+            <p>The focus of this quiz is to point out how people in power could do, and should do more.</p>
+            <p> Answer the questions below to find out the effect that Jeff Bezos's net-worth could have on a cause you
+            value.</p>
+            <p>All the statements I make are cited with a link to more information. I acknowledge that I'm speaking of
+            complex things with many facets not covered here.</p>
 
     </header>
 
@@ -28,7 +30,7 @@
             <div class="firstQuestion">
                 <h2>What is important to you? </h2>
                 <label for="question1">Which is more important to you?</label>
-                <p>The Natural enviorment!</p>
+                <p>The natural enviorment!</p>
                 <input autocomplete="off" type="radio" name="question1" value="enivorment">
                 <p>Humanitarian causes!</p>
                 <input autocomplete="off" type="radio" name="question1" value="humanitarian">
@@ -42,20 +44,20 @@
 
             <div class="enviormental hidden">
                 <h2>Enviormental causes are most important to you!</h2>
-                <label for="question2"> how would you beifit this cause ?</label>
-                <p>Doing what you can to help terra firma?</p>
+                <label for="question2">How would you support this cause?</label>
+                <p>Doing what you can to help the terra firma?</p>
                 <input autocomplete="off" type="radio" name="question2" value="land">
-                <p>Doing what you can to help the ocean or water ways?</p>
+                <p>Doing what you can to help the ocean or waterways?</p>
                 <input autocomplete="off" type="radio" name="question2" value="water">
                 <button class="cta2">change the world!</button>
             </div>
 
             <div class="humanity hidden">
                 <h2>Humanitarian causes are most important to you!</h2>
-                <label for="question2">what scale would you focus?</label>
+                <label for="question2">On what scale would you focus?</label>
                 <p>Provide global support</p>
                 <input autocomplete="off" type="radio" name="question2" value="global">
-                <p>Support localy</p>
+                <p>Support locally</p>
                 <input autocomplete="off" type="radio" name="question2" value="indivigual">
                 <button class="cta2">change the world!</button>
             </div>
@@ -66,29 +68,29 @@
         <!-- question 3 start -->
         <section class="question">
             <div class="land hidden">
-                <h2>land causes are most important to you!</h2>
-                <label for="question3"> how would you beifit this cause?</label>
+                <h2>Land causes are most important to you!</h2>
+                <label for="question3">How would you support this cause?</label>
                 <p>Protecting Forests</p>
                 <input autocomplete="off" type="radio" name="question3" value="ProtectingForests">
-                <p>Growing Green Energy</p>
+                <p>Advancing Green Energy</p>
                 <input autocomplete="off" type="radio" name="question3" value="greenEnergy">
                 <button class="cta3">change the world!</button>
             </div>
 
             <div class="water hidden">
-                <h2>water causes are most important to you!</h2>
-                <label for="question3"> how would you beifit this cause?</label>
-                <p>Saving the great barrior reef</p>
+                <h2>Water causes are most important to you!</h2>
+                <label for="question3">How would you support this cause?</label>
+                <p>Saving the Great Barrier Reef</p>
                 <input autocomplete="off" type="radio" name="question3" value="savingReef">
-                <p>Clearing out trash Island</p>
+                <p>Cleaning up Trash Island</p>
                 <input autocomplete="off" type="radio" name="question3" value="trashIsland">
                 <button class="cta3">change the world!</button>
             </div>
 
             <div class="global hidden">
                 <h2>Societal causes are most important to you!</h2>
-                <label for="question3"> how would you beifit this cause?</label>
-                <p>Doctors without Borders</p>
+                <label for="question3">How would you support this cause?</label>
+                <p>Funding Doctors Without Borders</p>
                 <input autocomplete="off" type="radio" name="question3" value="existingPrograms">
                 <p>Refugee support</p>
                 <input autocomplete="off" type="radio" name="question3" value="globalsupport">
@@ -97,10 +99,10 @@
 
             <div class="indivigual hidden">
                 <h2>Personal rights causes are most important to you!</h2>
-                <label for="question3"> how would you beifit this cause ?</label>
-                <p>helping people get off the street</p>
+                <label for="question3">How would you support this cause?</label>
+                <p>Provide housing for the homeless</p>
                 <input autocomplete="off" type="radio" name="question3" value="homelessness">
-                <p>support for your workers</p>
+                <p>Financial relief for Amazon employees</p>
                 <input autocomplete="off" type="radio" name="question3" value="fairWages">
                 <button class="cta3">change the world!</button>
             </div>
