functional updates and js stream lining

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <section class="question">
             <div class="firstQuestion">
                 <h2>What is important to you? </h2>
-                <label for="question1">Which is more important to you?</label>
-                <p>The natural enviorment!</p>
-                <input autocomplete="off" type="radio" name="question1" value="enivorment">
-                <p>Humanitarian causes!</p>
-                <input autocomplete="off" type="radio" name="question1" value="humanitarian">
+                <h3>Which is more important to you?</h3>
+                <label for="natural">The natural enviorment!</label>
+                <input autocomplete="off" type="radio" name="question1" id="natural" value="enivorment">
+                <label for="human">Humanitarian causes!</label>
+                <input autocomplete="off" id="human" type="radio" name="question1" value="humanitarian">
                 <button class="cta1">change the world!</button>
             </div>
         </section>
@@ -44,21 +44,21 @@
 
             <div class="enviormental hidden">
                 <h2>Enviormental causes are most important to you!</h2>
-                <label for="question2">How would you support this cause?</label>
-                <p>Doing what you can to help the terra firma?</p>
-                <input autocomplete="off" type="radio" name="question2" value="land">
-                <p>Doing what you can to help the ocean or waterways?</p>
-                <input autocomplete="off" type="radio" name="question2" value="water">
+                <h3>How would you support this cause?</h3>
+                <label for="land">Doing what you can to help the terra firma?</label>
+                <input autocomplete="off" type="radio" name="question2" id="land" value="land">
+                <label for="water">Doing what you can to help the ocean or waterways?</label>
+                <input autocomplete="off" type="radio" name="question2" id="water" value="water">
                 <button class="cta2">change the world!</button>
             </div>
 
             <div class="humanity hidden">
                 <h2>Humanitarian causes are most important to you!</h2>
-                <label for="question2">On what scale would you focus?</label>
-                <p>Provide global support</p>
-                <input autocomplete="off" type="radio" name="question2" value="global">
-                <p>Support locally</p>
-                <input autocomplete="off" type="radio" name="question2" value="indivigual">
+                <h3 for="question2">On what scale would you focus?</h3>
+                <label for="global">Provide global support</label>
+                <input autocomplete="off" type="radio" name="question2" id="global" value="global">
+                <label for="indivigual">Support locally</label>
+                <input autocomplete="off" type="radio" name="question2" id="indivigual" value="indivigual">
                 <button class="cta2">change the world!</button>
             </div>
 
@@ -69,41 +69,41 @@
         <section class="question">
             <div class="land hidden">
                 <h2>Land causes are most important to you!</h2>
-                <label for="question3">How would you support this cause?</label>
-                <p>Protecting Forests</p>
-                <input autocomplete="off" type="radio" name="question3" value="ProtectingForests">
-                <p>Advancing Green Energy</p>
-                <input autocomplete="off" type="radio" name="question3" value="greenEnergy">
+                <h3>How would you support this cause?</h3>
+                <label for="forests">Protecting Forests</label>
+                <input autocomplete="off" type="radio" name="question3" id="forests" value="ProtectingForests">
+                <label for="energy">Advancing Green Energy</label>
+                <input autocomplete="off" type="radio" name="question3" id="energy" value="greenEnergy">
                 <button class="cta3">change the world!</button>
             </div>
 
             <div class="water hidden">
                 <h2>Water causes are most important to you!</h2>
-                <label for="question3">How would you support this cause?</label>
-                <p>Saving the Great Barrier Reef</p>
-                <input autocomplete="off" type="radio" name="question3" value="savingReef">
-                <p>Cleaning up Trash Island</p>
-                <input autocomplete="off" type="radio" name="question3" value="trashIsland">
+                <h3>How would you support this cause?</h3>
+                <label for="reef">Saving the Great Barrier Reef</label>
+                <input autocomplete="off" type="radio" name="question3" id="reef" value="savingReef">
+                <label for="trash">Cleaning up Trash Island</label>
+                <input autocomplete="off" type="radio" name="question3" id="trash" value="trashIsland">
                 <button class="cta3">change the world!</button>
             </div>
 
             <div class="global hidden">
                 <h2>Societal causes are most important to you!</h2>
-                <label for="question3">How would you support this cause?</label>
-                <p>Funding Doctors Without Borders</p>
-                <input autocomplete="off" type="radio" name="question3" value="existingPrograms">
-                <p>Refugee support</p>
-                <input autocomplete="off" type="radio" name="question3" value="globalsupport">
+                <h3>How would you support this cause?</h3>
+                <label for="existing">Funding Doctors Without Borders</label>
+                <input autocomplete="off" type="radio" name="question3" id="existing" value="existingPrograms">
+                <label for="refugee">Refugee support</label>
+                <input autocomplete="off" type="radio" name="question3" id="refugee" value="globalsupport">
                 <button class="cta3">change the world!</button>
             </div>
 
             <div class="indivigual hidden">
                 <h2>Personal rights causes are most important to you!</h2>
-                <label for="question3">How would you support this cause?</label>
-                <p>Provide housing for the homeless</p>
-                <input autocomplete="off" type="radio" name="question3" value="homelessness">
-                <p>Financial relief for Amazon employees</p>
-                <input autocomplete="off" type="radio" name="question3" value="fairWages">
+                <h3>How would you support this cause?</h3>
+                <label for="homeless">Provide housing for the homeless</label>
+                <input autocomplete="off" type="radio" name="question3" id="homeless" value="homelessness">
+                <label for="fair">Financial relief for Amazon employees</label>
+                <input autocomplete="off" type="radio" name="question3" id="fair" value="fairWages">
                 <button class="cta3">change the world!</button>
             </div>
 
