Major style update
-update input styles
-update anchor styles
-accessibility improvements

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
             <div class="firstQuestion">
                 <h2>What is important to you? </h2>
                 <h3>Which is more important to you?</h3>
-                <label for="natural">The natural enviorment!</label>
                 <input autocomplete="off" type="radio" name="question1" id="natural" value="enivorment">
-                <label for="human">Humanitarian causes!</label>
+                <label for="natural">the natural enviorment!</label>
                 <input autocomplete="off" id="human" type="radio" name="question1" value="humanitarian">
-                <button class="cta1">change the world!</button>
+                <label for="human">humanitarian causes!</label>
+                <button class="cta1">next</button>
             </div>
         </section>
         <!-- question 1 end -->
@@ -45,21 +45,21 @@
             <div class="enviormental hidden">
                 <h2>Enviormental causes are most important to you!</h2>
                 <h3>How would you support this cause?</h3>
-                <label for="land">Doing what you can to help the terra firma?</label>
                 <input autocomplete="off" type="radio" name="question2" id="land" value="land">
-                <label for="water">Doing what you can to help the ocean or waterways?</label>
+                <label for="land">doing what you can to help the terra firma?</label>
                 <input autocomplete="off" type="radio" name="question2" id="water" value="water">
-                <button class="cta2">change the world!</button>
+                <label for="water">doing what you can to help the ocean or waterways?</label>
+                <button class="cta2">next</button>
             </div>
 
             <div class="humanity hidden">
-                <h2>Humanitarian causes are most important to you!</h2>
+                <h2>humanitarian causes are most important to you!</h2>
                 <h3 for="question2">On what scale would you focus?</h3>
-                <label for="global">Provide global support</label>
                 <input autocomplete="off" type="radio" name="question2" id="global" value="global">
-                <label for="indivigual">Support locally</label>
+                <label for="global">provide global support</label>
                 <input autocomplete="off" type="radio" name="question2" id="indivigual" value="indivigual">
-                <button class="cta2">change the world!</button>
+                <label for="indivigual">Support locally</label>
+                <button class="cta2">next</button>
             </div>
 
         </section>
@@ -68,43 +68,43 @@
         <!-- question 3 start -->
         <section class="question">
             <div class="land hidden">
-                <h2>Land causes are most important to you!</h2>
-                <h3>How would you support this cause?</h3>
-                <label for="forests">Protecting Forests</label>
+                <h2>land causes are most important to you!</h2>
+                <h3>how would you support this cause?</h3>
                 <input autocomplete="off" type="radio" name="question3" id="forests" value="ProtectingForests">
-                <label for="energy">Advancing Green Energy</label>
+                <label for="forests">protecting Forests</label>
                 <input autocomplete="off" type="radio" name="question3" id="energy" value="greenEnergy">
-                <button class="cta3">change the world!</button>
+                <label for="energy">advancing Green Energy</label>
+                <button class="cta3">next</button>
             </div>
 
             <div class="water hidden">
                 <h2>Water causes are most important to you!</h2>
                 <h3>How would you support this cause?</h3>
-                <label for="reef">Saving the Great Barrier Reef</label>
                 <input autocomplete="off" type="radio" name="question3" id="reef" value="savingReef">
-                <label for="trash">Cleaning up Trash Island</label>
+                <label for="reef">saving the Great Barrier Reef</label>
                 <input autocomplete="off" type="radio" name="question3" id="trash" value="trashIsland">
-                <button class="cta3">change the world!</button>
+                <label for="trash">cleaning up Trash Island</label>
+                <button class="cta3">next</button>
             </div>
 
             <div class="global hidden">
                 <h2>Societal causes are most important to you!</h2>
                 <h3>How would you support this cause?</h3>
-                <label for="existing">Funding Doctors Without Borders</label>
                 <input autocomplete="off" type="radio" name="question3" id="existing" value="existingPrograms">
-                <label for="refugee">Refugee support</label>
+                <label for="existing">funding Doctors Without Borders</label>
                 <input autocomplete="off" type="radio" name="question3" id="refugee" value="globalsupport">
-                <button class="cta3">change the world!</button>
+                <label for="refugee">refugee support</label>
+                <button class="cta3">next</button>
             </div>
 
             <div class="indivigual hidden">
                 <h2>Personal rights causes are most important to you!</h2>
                 <h3>How would you support this cause?</h3>
-                <label for="homeless">Provide housing for the homeless</label>
                 <input autocomplete="off" type="radio" name="question3" id="homeless" value="homelessness">
-                <label for="fair">Financial relief for Amazon employees</label>
+                <label for="homeless">provide housing for the homeless</label>
                 <input autocomplete="off" type="radio" name="question3" id="fair" value="fairWages">
-                <button class="cta3">change the world!</button>
+                <label for="fair">financial relief for Amazon employees</label>
+                <button class="cta3">results</button>
             </div>
 
         </section>
@@ -115,9 +115,11 @@
 
         </div>
         <!-- results presntation end -->
+        <button class="cta4">reset</button>
     </main>
     <footer>
-        <button class="cta4">reset</button>
+        <p>Made by <a href="https://thomasgarrison.online/">Thomas Garrison</a> @ <a href="https://junocollege.com">Juno
+                College</a></p>
     </footer>
 </body>
 <script src='https://code.jquery.com/jquery-3.4.0.min.js'
